<?xml version="1.0"?>
<package format="2">

  <name>tool_station_detection</name>
  <version>0.0.1</version>
  <description>
    Tool Exchanger manager for Flexbotics framework
  </description>
  <author>Aitor Ibarguren</author>
  <maintainer email="aitor.ibarguren@tecnalia.com">Aitor Ibarguren</maintainer>
  <license>CommercialTecnalia</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>roscpp</build_depend>
  <!-- <build_depend>tool_exchanger_info_manager</build_depend> -->
  <build_depend>eigen_conversions</build_depend>
  <build_depend>eigen_helper_functions</build_depend>
  <build_depend>flexbotics_manipulator_manager_msgs</build_depend>
  <build_depend>flexbotics_manipulation_planner_msgs</build_depend>
 
  
</package>
