<?xml version="1.0"?>
<package format="2">

  <name>tool_station_detection_msgs</name>
  <version>0.0.1</version>
  <description>
    Manipulation Manager messages definition for Flexbotics framework
  </description>
  <author>Aitor Ibarguren</author>
  <maintainer email="aitor.ibarguren@tecnalia.com">Aitor Ibarguren</maintainer>
  <license>CommercialTecnalia</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  
</package>
